# node-registrar/docs/swagger.yaml
@@ -697,6 +697,38 @@ paths:
       summary: Update node
       tags:
       - nodes
+  /nodes/{node_id}/reward:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves reward calculation for a specific node based on resources
+        and uptime
+      parameters:
+      - description: Node ID
+        in: path
+        name: node_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Rewards details with the node uptime percentage
+          schema:
+            $ref: '#/definitions/server.Reward'
+        "400":
+          description: Invalid node ID
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Node not found
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Get node monthly reward information
+      tags:
+      - nodes
   /nodes/{node_id}/uptime:
     post:
       consumes:
